# formatrix-docs

./: .editorconfig  .gitignore  AGENTIC.scm  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  ECOSYSTEM.scm  EXPLAINME.adoc  Justfile  META.scm  NEUROSYM.scm  PALIMPSEST.adoc  PLAYBOOK.scm  QUICKSTART-DEV.adoc  QUICKSTART-MAINTAINER.adoc  QUICKSTART-USER.adoc  README.adoc  README.md  ROADMAP.adoc  RSR_COMPLIANCE.adoc  RSR_OUTLINE.adoc  SECURITY.md  STATE.scm  TEST-NEEDS.md  TOPOLOGY.md  flake.nix  guix.scm  justfile  llm-warmup-dev.md  llm-warmup-user.md  setup.sh  stapeln.toml
.claude/: CLAUDE.md
.github/workflows/: casket-pages.yml  cflite_batch.yml  cflite_pr.yml  governance.yml  rust-ci.yml  secret-scanner.yml
.hypatia/: activity.jsonl  last-visit.json
.machine_readable/: ADJUST.contractile  CLADE.a2ml  ECOSYSTEM.scm  INTENT.contractile  META.scm  MUST.contractile  STATE.scm  TRUST.contractile
.machine_readable/6a2/: ECOSYSTEM.a2ml  META.a2ml  STATE.a2ml
.machine_readable/6a2/anchor/: ANCHOR.a2ml
.well-known/: security.txt
bindings/zig/: README.md  build.zig  example.zig  formatrix.zig
container/: Dockerfile.wolfi  nerdctl-compose.yml
contractiles/intend/: Intentfile.a2ml
contractiles/trust/: Trustfile.a2ml
crates/formatrix-bridges/: Cargo.toml
crates/formatrix-bridges/src/: fs_bridge.rs  lib.rs  store.rs
crates/formatrix-bridges/src/bridges/: mod.rs  trilium.rs
crates/formatrix-core/: Cargo.toml
crates/formatrix-core/src/: ast.rs  ffi.rs  file_ops.rs  lib.rs  traits.rs
crates/formatrix-core/src/formats/: djot.rs  markdown.rs  mod.rs  orgmode.rs  plaintext.rs  rst.rs  typst.rs
crates/formatrix-db/: Cargo.toml
crates/formatrix-db/src/: lib.rs
crates/formatrix-gui/: Cargo.toml  build.rs  gossamer.conf.json
crates/formatrix-gui/src/: commands.rs  lib.rs  main.rs
crates/formatrix-pipeline/: Cargo.toml
crates/formatrix-pipeline/src/: lib.rs
docs/: CITATIONS.adoc  DOCUMENTATION-SYSTEM-ARCHITECTURE.adoc  MOSCOW-REQUIREMENTS.adoc  SEAM-CHECK-MUSTS.adoc  V1-PUBLISH-ROADMAP.adoc  tech-debt-2026-05-26.md
docs/reports/audit/: audit-2026-04-15-post.md
ffi/zig/src/: main.zig
fuzz/: Cargo.toml
guix/: channel.scm  formatrix.scm
nix/: flake.nix
tui/: formatrix_tui.gpr
tui/src/: formatrix_tui-app.adb  formatrix_tui-app.ads  formatrix_tui-ui.adb  formatrix_tui-ui.ads  formatrix_tui.adb
tui/src/editor/: editor.ads  safe_buffer.adb  safe_buffer.ads  safe_cursor.adb  safe_cursor.ads
ui/: deno.json  index.html  rescript.json
ui/src/: App.res  Model.res  Msg.res  RuntimeBridge.res
ui/src/components/: FormatTabs.res
ui/styles/: main.css
