# SPDX-License-Identifier: AGPL-3.0-or-later
#
# Formatrix Docs - Cross-platform document editor with format tabs
# https://github.com/hyperpolymath/formatrix-docs

[workspace]
resolver = "2"
members = [
    "crates/formatrix-core",
    "crates/formatrix-gui",
    "crates/formatrix-db",
    "crates/formatrix-pipeline",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["hyperpolymath"]
license = "AGPL-3.0-or-later"
repository = "https://github.com/hyperpolymath/formatrix-docs"
keywords = ["document", "editor", "markdown", "asciidoc", "typst"]
categories = ["text-processing", "gui"]

[workspace.dependencies]
# Format parsers
comrak = { version = "0.29", default-features = false, features = ["syntect"] }
jotdown = "0.7"
orgize = { version = "0.9", features = ["chrono"] }
rst_parser = "0.4"
document_tree = "0.4"
typst-syntax = "0.12"

# Database
arangors = "0.6"

# Pipeline
nickel-lang-core = "0.10"

# External tools
tesseract-rs = "0.3"
vosk = "0.3"

# GUI framework
tauri = { version = "2", features = [] }
tauri-build = "2"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"

# Error handling
thiserror = "2.0"
anyhow = "1.0"

# Async runtime
tokio = { version = "1.42", features = ["rt-multi-thread", "macros", "fs", "io-util"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Utilities
unicode-segmentation = "1.11"

[profile.release]
lto = true
codegen-units = 1
strip = true
opt-level = "z"
