# SPDX-License-Identifier: AGPL-3.0-or-later
[package]
name = "formatrix-db"
description = "ArangoDB client for Formatrix Docs gist library and graph storage"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
arangors.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
thiserror.workspace = true
tracing.workspace = true
