# SPDX-License-Identifier: PMPL-1.0-or-later
[package]
name = "formatrix-gui"
description = "Gossamer GUI for Formatrix Docs"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[[bin]]
name = "formatrix-gui"
path = "src/main.rs"

[dependencies]
formatrix-core = { path = "../formatrix-core" }

gossamer-rs = { path = "../../../gossamer/bindings/rust" }

serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true

# Hashing for document events
sha2 = "0.10"
