# SPDX-License-Identifier: AGPL-3.0-or-later
[package]
name = "formatrix-pipeline"
description = "Nickel-based content pipeline engine for Formatrix Docs"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
nickel-lang-core.workspace = true
formatrix-core = { path = "../formatrix-core" }
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tracing.workspace = true
